snippets/Nemerle.Statechart/Tests/testsuite/negative/deferrable_override_warning.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using System.Collections.Generic;
using System.Linq;
using System.Console;
using Nemerle.Statechart;
  /// <summary>
  /// Description of Hypothetical.
  /// </summary>
  [statechart(<#

  flags testing;
  //flags debug;

  name "deferable event override error";

  state A
  {
    a / defer; // W: Transition "DeferrableEventaAtA" is overriden by \[TransitionBToCBya, TransitionCToBBya\], due to execute priority rules, because this transitions is always enabled

    state B
    {
      a => C;
    }

    state C
    {
      a => B;
    }
  }

  #>)]
  public class example
  {
  }

